--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -18,3 +18,6 @@
         %li.nav-item
           %a.nav-link{ :href => "https://resume.creddle.io/resume/h94jq9onthp", :target => "_blank" }
             Resume
+        %li.nav-item
+          %a.nav-link{ :href => root_path }
+            Contact
